# expts

cascades/: benchmark.sh  epoch_to_query  queries1.txt  queries2.txt  setup.sh  tcp_schema1.txt  tcp_schema2.txt
cascades/traces/: flow1  flow2  flow3
common/: load-trace.sh  query-confluo.sh  start-confluo.sh  teardown.sh
common/load-trace/: CMakeLists.txt  build.sh
common/load-trace/cmake-modules/: Dependencies.cmake
common/load-trace/libloadtrace/: CMakeLists.txt
common/load-trace/libloadtrace/src/: load_trace.cc
common/query-confluo/: CMakeLists.txt
common/query-confluo/libqueryconfluo/: CMakeLists.txt
common/query-confluo/libqueryconfluo/src/: query_confluo.cc
toomanyredlights/: benchmark.sh  diagnosis.sh  epoch_to_query  eps.txt  queries.txt  setup.sh  tcp_schema.txt  udp_schema.txt
toomanyredlights/traces/: flow1  flow2  flow3
toomuchtraffic/: diagnosis.sh  eps.txt  setup.sh  tcp_schema.txt  udp_schema.txt
toomuchtraffic/microburst/: benchmark.sh  setup.sh  start-confluo.sh
toomuchtraffic/microburst/traces/: flow1  flow10  flow11  flow12  flow13  flow14  flow15  flow16  flow17  flow2  flow3  flow4  flow5  flow6  flow7  flow8  flow9
toomuchtraffic/priority/: benchmark.sh
toomuchtraffic/priority/traces/: flow1  flow10  flow11  flow12  flow13  flow14  flow15  flow16  flow17  flow2  flow3  flow4  flow5  flow6  flow7  flow8  flow9
